# docrun

./: .gitignore  SUGGESTIONS.md  docker_runner.py  docker_runner_gui.py  pyproject.toml  testit.py
.obsidian/: workspace.json
